Dissallow absolute imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,10 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "*": ["src/*", "node_modules/*"]
+      "*": ["node_modules/*"]
     },
     "jsx": "react",
     "esModuleInterop": true,
-    "downlevelIteration": true,
+    "downlevelIteration": true
   }
 }
