--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "async-sema": "3.1.0",
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "node-fetch": "^2.6.0"
