--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
+  "name": "ardoq-sdk-js",
   "version": "0.1.3",
+  "description": "A software development kit for integrating with Ardoq",
+  "keywords": [
+    "Ardoq",
+    "Enterprise architecture",
+    "SDK"
+  ],
+  "homepage": "https://github.com/ardoq/ardoq-sdk-js",
+  "bugs": {
+    "url": "https://github.com/ardoq/ardoq-sdk-js/issues"
+  },
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "author": "Tobias Laundal",
   "files": [
     "dist"
   ],
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "module": "dist/ardoq-sdk-js.esm.js",
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
@@ -13,21 +26,6 @@
     "lint": "yarn eslint --ext .ts src",
     "prepare": "tsdx build"
   },
-  "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "ardoq-sdk-js",
-  "author": "Tobias Laundal",
-  "module": "dist/ardoq-sdk-js.esm.js",
   "devDependencies": {
     "@ardoq/shared-configs": "^0.0.13",
     "@types/jest": "^25.1.1",
@@ -43,5 +41,16 @@
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
     "node-fetch": "^2.6.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
