--- a/package.json
+++ b/package.json
@@ -27,14 +27,24 @@
     "prepare": "tsdx build"
   },
   "devDependencies": {
-    "@ardoq/shared-configs": "^0.0.13",
-    "@types/jest": "^25.1.1",
+    "@ardoq/shared-configs": "0.1.3",
+    "@types/jest": "26.0.13",
     "@types/lodash": "^4.14.149",
     "@types/node-fetch": "^2.5.4",
+    "@typescript-eslint/eslint-plugin": "4.1.1",
+    "@typescript-eslint/parser": "4.1.1",
+    "eslint": "7.9.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-sort-class-members": "1.8.0",
     "husky": "^4.2.1",
-    "tsdx": "^0.12.3",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "prettier": "2.1.2",
+    "tsdx": "0.13.3",
+    "tslib": "2.0.1",
+    "typescript": "4.0.2"
   },
   "dependencies": {
     "async-sema": "3.1.0",
